examples/malloc/klee-out-0/test000001.cvc
model_version0  : ARRAY BITVECTOR(32) OF BITVECTOR(8);
sym_766206081  : ARRAY BITVECTOR(32) OF BITVECTOR(8);
%----------------------------------------------------
ASSERT( ((((0x01 = model_version0[0x00000000]
) AND (0x00 = model_version0[0x00000001]
)
) AND (0x00 = model_version0[0x00000002]
)
) AND (0x00 = model_version0[0x00000003]
)
) );
ASSERT( ( NOT( BVGT((sym_766206081[0x00000007] @ (sym_766206081[0x00000006] @ (sym_766206081[0x00000005] @ (sym_766206081[0x00000004] @ (sym_766206081[0x00000003] @ (sym_766206081[0x00000002] @ (sym_766206081[0x00000001] @ sym_766206081[0x00000000]
)
)
)
)
)
)
),0x0000000000000010)
)) );
%----------------------------------------------------
QUERY( FALSE  );
